secret-provider.yaml
# Name Space 
apiVersion: v1
kind: Namespace
metadata:
  name: todo-app
